# Ex4

./: CLI.cpp  CLI.h  CMakeLists.txt  Client.cpp  Client.h  Command.cpp  Command.h  Command1.cpp  Command1.h  Command2.cpp  Command2.h  Command3.cpp  Command3.h  Command4.cpp  Command4.h  Command5.cpp  Command5.h  DefaultIO.h  DefualtIO.cpp  Distance.cpp  Distance.h  Input.cpp  Input.h  Knn.cpp  Knn.h  Makefile  Makefile.cpp  README.md  Server.cpp  Server.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h  beans_UnClassified.csv  iris_Unclassified.csv  iris_classified.csv  predictions.txt  wine_UnClassified.csv
datasets/: prediction.txt  wine_UnClassified.csv
